--- a/collatz-coq/Makefile
+++ b/collatz-coq/Makefile
@@ -2,13 +2,10 @@ COQC=coqc
 COQFLAGS=-Q src Collatz
 
 all:
-	$(COQC) $(COQFLAGS) src/CollatzBase.v
-	$(COQC) $(COQFLAGS) src/CollatzState.v
-	$(COQC) $(COQFLAGS) src/CollatzCertificate.v
-	$(COQC) $(COQFLAGS) src/CertificateChecker.v
-	$(COQC) $(COQFLAGS) src/CertificateData.v
-	$(COQC) $(COQFLAGS) src/MainTheorem.v
-	$(COQC) $(COQFLAGS) src/BoundedDescentSound.v
 	$(COQC) $(COQFLAGS) src/LocalLemmas.v
-	$(COQC) $(COQFLAGS) src/CollatzGlobal.v
-	
+	$(COQC) $(COQFLAGS) src/CollatzCore.v
+	$(COQC) $(COQFLAGS) src/CollatzBase.v
+	$(COQC) $(COQFLAGS) src/CollatzIter.v
+	$(COQC) $(COQFLAGS) src/BridgeGlobal.v
+	$(COQC) $(COQFLAGS) src/CheckerSpec.v
+	$(COQC) $(COQFLAGS) src/MainTheorem.v
