--- a/run_INIT30_MOD40/config.json
+++ b/run_INIT30_MOD40/config.json
@@ -4,6 +4,18 @@
   "MOD_BITS": 40,
   "INIT_BITS": 30,
   "BATCH_SIZE": 1000000,
-  "DEPTH_LOG_THRESHOLD": 120,
-  "OUTPUT_DIR": "run_INIT30_MOD40"
+  "OUTPUT_DIR": "run_INIT30_MOD40",
+  "WRITE_UNCOVERED": true,
+  "UNCOVERED_COMPRESS": true,
+  "UNCOVERED_MAX_WRITE": 0,
+  "MAX_QUEUE_STATES_SOFTCAP": 0,
+  "WRITE_HASHES": true,
+  "HASH_DIGEST_SIZE": 32,
+  "HASH_ORDER_INDEPENDENT": true,
+  "HASH_INCLUDE_A": true,
+  "WRITE_COQ_BUCKETS": true,
+  "COQ_BUCKETS_PER_BATCH": true,
+  "COQ_WRITE_GLUE_FILE": true,
+  "COQ_MODULE_PREFIX": "BucketWitnesses",
+  "COQ_BUCKET_TYPE": "BucketCertificate"
 }
